--- a/gb/23/9/20/n14077402.md
+++ b/gb/23/9/20/n14077402.md
@@ -1,7 +1,7 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
 <table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>谷歌将把AI聊天机器人 扩展应用到其它数位资产</h2>
+<tr><td VALIGN=TOP width="626"><h2 align=center>谷歌将把AI聊天机器人应用到其它数位资产</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/09/id14077451-4ef4957bfe21be4fc43323477c96f323-600x400.jpeg" />
 <h6>图为2023年7月18日在法国图卢兹拍摄的一款由Google和ChatGPT开发的对话式人工智能软体应用程序。(Lionel Bonaventure/AFP via Getty Images)
 </h6>
@@ -22,45 +22,38 @@
 <p>列出不同的航班和酒店选择，从地图上提供路线指引，并从YouTube提供一系列信息丰富的视频。◇</p>
 <p>责任编辑：宋佳怡</p>
 	
-<hr>
-
-
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/16/n14017679.md#1">AI聊天机器人有泄密风险 谷歌警告员工当心</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/28/n14024381.md#1">英伟达AI芯片点燃美中人工智能之战？</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/29/n14025169.md#1">AI之父辛顿：人工智能对人类造成六大危害</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/13/n14033244.md#1">马斯克成立新公司xAI “了解宇宙真实本质”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">每日更新：儿童专属梦幻公主帐篷 亚马逊63%折扣</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14135076.md#1">羊毛衫不缩水不掉色 这种洗衣液是关键</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/10/n14133310.md#1">亚马逊8款热卖居家好物 可享受圣诞节折扣</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/ntdtv/blob/master/gb/2020/07/20/a102898210.md#1" target="_blank">美国务卿：中共迫害法轮功21年 必须停止</a> </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/6/n10195043.md#1" target="_blank">袁斌：中共“苏维埃共和国”的专制实验</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/8/n11098363.md#1" target="_blank">美国际宗教自由大使访港 促停止迫害法轮功</a></li>
-<hr>
-
+<li><a href="https://github.com/19920513/ntdtv/blob/master/gb/2020/04/16/a102824026.md#1" target="_blank">前凤凰网记者：中共迫害法轮功是最大的作恶/a> </li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/1/23/n10995753.md#1" target="_blank">九州：注定失败的共产主义</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/16/5/18/n7908087.md#1" target="_blank">三次听法轮功真相 大陆公安腿病神奇康复</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062287.md#1">【古道人生】两人为躲债藏山洞 结果都把债还了</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/15/n14074103.md#1">【未解之谜】“雷暴哮喘” 《推背图》中的秘密？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/11/n14071134.md#1">【未解之谜】不爱江山爱美人？顺治之谜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/6/n14067903.md#1">【杨延昭传奇】乱世中的命定姻缘（下）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/14/n14073883.md#1">医院放弃治疗 植物人神奇被唤醒</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/19/n14077109.md#1">【菁英论坛】“收租院”血迹斑斑 刘文彩真相</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/19/n14077210.md#1">【秦鹏观察】融创在美申请破产保护 酿更大危机</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/19/n14076733.md#1">【全球新闻】传李尚福供出17人 中共评估秦李案影响</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/17/n14075376.md#1">【翻墙必看】分析：秦刚还活着吗？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/18/n14076086.md#1">专家：习近平在评估秦刚李尚福案的影响</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/18/n14075767.md#1">王毅过关内幕 习近平实现野心的两手策略</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/17/n14075690.md#1">李易峰因嫖娼遭封杀一年 疑似复出直播遭举报</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/17/n14075692.md#1">中共抗日剧饰日军官 马卫军罹喉癌于东京病亡</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/18/n14076481.md#1">与日武打女星武田梨奈聚会 洪金宝暴瘦照曝光</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/17/n14075660.md#1">袁冰妍被点名偷漏税 微博遭禁 电视台急切割</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/18/n14076516.md#1">遭史密斯掌掴致心理创伤？洛克被曝曾求医</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/17/n14075482.md#1">日本80岁老翁登顶2230次 富士山为何吸引人？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/14/n14073756.md#1">研究：高脂肪早餐可提升晚期肺癌药疗效</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/18/n14076055.md#1">医生提出警告 不要和小狗同床而睡</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065005.md#1">拯救视力勿乱点药水 中医教你1分钟养眼 效果最佳</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/12/n14071834.md#1">你了解自己吗？千万别活成他人眼中的人偶</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/5/n14129958.md#1">威赫西域的汉宣帝 一道柔情诏书显露夫妻的恩义</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/11/n14133709.md#1">【未解之谜】《推背图》47象 紫薇圣人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/6/n14131208.md#1">莫愁女 诗歌里永不老去的佳人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/30/n14127127.md#1">奉天命助圣王治世 百日为相白马化龙（上）</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/22/2/21/n13594978.md#1">【器乐独奏与协奏曲】布鲁赫《苏格兰幻想曲》，作品第46号</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137533.md#1">【车评】最实惠欧洲SUV  2024 Volkswagen Atlas SEL Premium R-Line</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137659.md#1">【全球新闻】大陆医生：中共病毒感染爆发式增长</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14136995.md#1">【中国禁闻】亲信旧部纷被抓 赵乐际遭围剿？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136615.md#1">中共央视新闻播出辱习画面 后紧急删除</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/13/n14135839.md#1">很梦幻？Costco新版购物车引发会员热议</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/13/n14135801.md#1">周海媚死讯不断反转 堪称现实版《新闻女王》</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136609.md#1">范冰冰竹林虎啸礼服入选CNN十大红毯造型</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/13/n14135870.md#1">10年前拍完未播 周海媚遗作遭拍卖原因曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136694.md#1">解约香港无线4个月 王晶之女王子涵曝新动向</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14135921.md#1">与周海媚合演《倚天屠龙记》 马景涛写信悼念</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">每日更新：儿童专属梦幻公主帐篷 63%折扣</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">FIJI天然自流瓶装水 不含8 种主要过敏原</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14135019.md#1">苹果防糖尿病、阻癌细胞扩散 品种、吃法全攻略</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/1/n14128227.md#1">掉发怎么办？中医6招教你长回浓密秀发</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136611.md#1">已逝明星患的是终生疾病？关于红斑狼疮一篇看懂</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/9/20/n14077402.htm">谷歌将把AI聊天机器人 扩展应用到其它数位资产</a></p><hr>
-
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/9/20/n14077402.htm">谷歌将把AI聊天机器人应用到其它数位资产</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/9/20/n14077402.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
